--- a/index.html
+++ b/index.html
@@ -1,13 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter&family=Nunito:wght@200&display=swap"
+      rel="stylesheet"
+    />
     
-</body>
+  </head>
+  <body>
+    <header class="header">
+      <div class="header-content">
+        <h1 class="header-title">Let's Help Those Who Are More In Need</h1>
+        <p class="header-description">
+          Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam
+          falli deterruisset. No duo populo animal noluisse, enim
+        </p>
+        <p class="btn">Donate now</p>
+      </div>
+    </header>
+    <main>
+      <section class="donate-section">
+        <h1 class="section-title">Donate Today</h1>
+        <p class="section-description">
+          Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam
+          falli deterruisset. No duo populo animal noluisse, enim
+        </p>
+        <div class="section-content">
+            <p>100tk</p>
+            <p class="highlights">200tk</p>
+            <p>500tk</p>
+            <p>1000tk</p>
+            <p>5000tk</p>
+        </div>
+      </section>
+    </main>
+    <footer></footer>
+  </body>
 </html>
