--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
       href="https://fonts.googleapis.com/css2?family=Inter&family=Nunito:wght@200&display=swap"
       rel="stylesheet"
     />
-    
   </head>
   <body>
+    <!-- Header section -->
     <header class="header">
       <div class="header-content">
         <h1 class="header-title">Let's Help Those Who Are More In Need</h1>
@@ -26,6 +26,7 @@
       </div>
     </header>
     <main>
+      <!-- Donate section -->
       <section class="donate-section">
         <h1 class="section-title">Donate Today</h1>
         <p class="section-description">
@@ -33,14 +34,97 @@
           falli deterruisset. No duo populo animal noluisse, enim
         </p>
         <div class="section-content">
-            <p>100tk</p>
-            <p class="highlights">200tk</p>
-            <p>500tk</p>
-            <p>1000tk</p>
-            <p>5000tk</p>
+          <p>100tk</p>
+          <p class="highlights">200tk</p>
+          <p>500tk</p>
+          <p>1000tk</p>
+          <p>5000tk</p>
         </div>
       </section>
+
+      <!-- Donate plan section -->
+
+      <section class="donate-plan-section">
+        <h1 class="section-title">Our Donate Plan</h1>
+        <p class="section-description-1">
+          Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam
+          falli deterruisset. No duo populo animal noluisse, enim
+        </p>
+        <div class="plan-content">
+          <div class="plan-content-details-1">
+            <img src="./icons/food.png" alt="" />
+            <h2>Food for a family</h2>
+            <p>
+              Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+              amet sint. Velit officia consequat duis enim velit mollit.
+            </p>
+          </div>
+          <div class="plan-content-details-2">
+            <img src="./icons/shelter.png" alt="" />
+            <h2>Shelter for a family</h2>
+            <p>
+              Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+              amet sint. Velit officia consequat duis enim velit mollit.
+            </p>
+          </div>
+          <div class="plan-content-details-3">
+            <img src="./icons/Frame-1.png" alt="" />
+            <h2>Education for a child</h2>
+            <p>
+              Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+              amet sint. Velit officia consequat duis enim velit mollit.
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <!-- depend on section -->
+
+      <div class="depend-container">
+        <div class="depend-title">
+          <h2>Their lives depend on your donation</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed aperiam
+            adipisci hic itaque fugiat. Dolorum illum laudantium in odit
+            excepturi reprehenderit nemo vero ad, laborum fuga voluptas natus,
+            ducimus earum.
+          </p>
+
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed aperiam
+            adipisci hic itaque fugiat. Dolorum illum laudantium in odit
+            excepturi reprehenderit nemo vero ad, laborum fuga voluptas natus,
+            ducimus earum.
+          </p>
+          <button class="btn-1">How to contribute</button>
+        </div>
+        <div class="depend-title">
+          <img src="./images/donation1.jpg" alt="">
+        </div>
+        <div class="depend-title">
+          <img src="./images/donation6.jpg" alt="">
+        </div>
+        <div class="depend-title">
+          <h2>They need us <br>to survive</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed aperiam
+            adipisci hic itaque fugiat. Dolorum illum laudantium in odit
+            excepturi reprehenderit nemo vero ad, laborum fuga voluptas natus,
+            ducimus earum.
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed aperiam
+            adipisci hic itaque fugiat. Dolorum illum laudantium in odit
+            excepturi reprehenderit nemo vero ad, laborum fuga voluptas natus,
+            ducimus earum.
+          </p>
+          <button class="btn-1">How to contribute</button>
+        </div>
+      </div>
     </main>
     <footer></footer>
+
+    <br />
+    <br />
   </body>
 </html>
