--- a/index.html
+++ b/index.html
@@ -99,13 +99,13 @@
           <button class="btn-1">How to contribute</button>
         </div>
         <div class="depend-title">
-          <img src="./images/donation1.jpg" alt="">
+          <img src="./images/donation1.jpg" alt="" />
         </div>
         <div class="depend-title">
-          <img src="./images/donation6.jpg" alt="">
+          <img src="./images/donation6.jpg" alt="" />
         </div>
         <div class="depend-title">
-          <h2>They need us <br>to survive</h2>
+          <h2>They need us <br />to survive</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed aperiam
             adipisci hic itaque fugiat. Dolorum illum laudantium in odit
@@ -121,10 +121,28 @@
           <button class="btn-1">How to contribute</button>
         </div>
       </div>
-    </main>
-    <footer></footer>
 
-    <br />
-    <br />
+      <!-- Update Section -->
+
+      <div class="update-section">
+        <h2 class="section-title">Get My Updates</h2>
+        <p class="section-description">
+          Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam
+          falli deterruisset. No duo populo animal noluisse, enim
+        </p>
+
+        <div class="login-form">
+          <input type="email" name="name" placeholder="Email">
+          <button>Subscribe</button>
+        </div>
+      </div>
+    </main>
+    <!-- Footer Section -->
+    <footer>
+      <div class="footer-section">
+        <h2><i>Be Humble</i></h2>
+        <p>I'm gonna do it</p>
+      </div>
+    </footer>
   </body>
 </html>
